<resources>
    <string name="app_name">ExpenseTrackerv2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Under Construction</string>
    <string name="summary">Summary</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="addButton">Add..</string>
    <string name="accountName">Enter Name</string>
    <string name="inputAccountNameDone">Done</string>
    <string name="type">Type</string>
    <string-array name="budgetTypes">Income,Expense</string-array>>
    <string name="name">Name</string>>
    <string name="amount">Amount</string>
    <string name="btnCancel">Cancel</string>
    <string name="saveAllocationChanges">Save Changes</string>
    <string name="total">Total</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="algoLink">a href="https://en.wikipedia.org/wiki/Knapsack_problem"</string>

</resources>
