<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1000dp"
    android:layout_height="1000dp"
    android:rowCount="3"
    android:columnCount="2"
    >


    <TextView
        android:id="@+id/nameLabel"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="10dp"
        android:textSize="20dp"
        />



    <EditText
        android:id="@+id/txtName"
        android:layout_width="215dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:padding="10dp"
        android:textSize="20dp"
        android:background="@drawable/edittext_decorator"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        />


    <LinearLayout android:layout_row="2"
        android:layout_column="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:background="#FFFFBB33"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="20dp"

            />
        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputAccountNameDone"
            android:background="#FFFFBB33"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>


</GridLayout>